--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@types/express": "^5.0.0",
     "argon2": "^0.41.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/argon2": "^0.14.1",
+    "@types/cors": "^2.8.17",
     "@types/express-rate-limit": "^5.1.3",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^22.13.1",
